tests/negative/test_move_invoke_arg_ref.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

mac bar (x::preprocess) {
    >> x;

    ret \(block {});
};

fnc main () () {
    eval (sym f:Foo);
    bar f;
};